K8s/drone-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  droneservice-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: droneservice 
  template:
    metadata:
      labels:
        app: droneservice 
    spec:
      containers:
        - name: droneservice 
          image: amirashrafizham/be-iort
          securityContext:
            privileged: true
---
apiVersion: v1
kind: Service
metadata:
  name:  droneservice-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: droneservice 
  ports:
  - name: droneservice 
    protocol: TCP
    port: 80
    targetPort: 80
